test/corpus/collections.txt
================================================================================
Lists
================================================================================

(+ 1 2)
(def x 42)
()

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (number)
    (number))
  (list
    (symbol)
    (symbol)
    (number))
  (list))

================================================================================
Vectors
================================================================================

[1 2 3]
[:a :b :c]
[]

--------------------------------------------------------------------------------

(source_file
  (vector
    (number)
    (number)
    (number))
  (vector
    (keyword)
    (keyword)
    (keyword))
  (vector))

================================================================================
Maps
================================================================================

{:name "Alice" :age 30}
{1 "one" 2 "two"}
{}

--------------------------------------------------------------------------------

(source_file
  (map
    (keyword)
    (string)
    (keyword)
    (number))
  (map
    (number)
    (string)
    (number)
    (string))
  (map))
