test/corpus/literals.txt
================================================================================
Numbers
================================================================================

42
-17

--------------------------------------------------------------------------------

(source_file
  (number)
  (number))

================================================================================
Strings
================================================================================

"hello"
"world with spaces"
"string with \"quotes\""
"string with \\n newline"

--------------------------------------------------------------------------------

(source_file
  (string)
  (string)
  (string)
  (string))

================================================================================
Keywords
================================================================================

:keyword
:another-keyword
:key-with-dashes
:key?
:key!

--------------------------------------------------------------------------------

(source_file
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword))
