test/corpus/quoting.txt
================================================================================
Quote
================================================================================

'x
'(a b c)

--------------------------------------------------------------------------------

(source_file
  (quote
    (symbol))
  (quote
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
Quasiquote and unquote
================================================================================

`(let [x ~val] x)

--------------------------------------------------------------------------------

(source_file
  (quasiquote
    (list
      (symbol)
      (vector
        (symbol)
        (unquote
          (symbol)))
      (symbol))))

================================================================================
Unquote-splice
================================================================================

`(first ~@rest)

--------------------------------------------------------------------------------

(source_file
  (quasiquote
    (list
      (symbol)
      (unquote_splice
        (symbol)))))

================================================================================
Gensym symbols
================================================================================

(defmacro m [x] `(let [tmp# ~x] tmp#))

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (vector
      (symbol))
    (quasiquote
      (list
        (symbol)
        (vector
          (symbol)
          (unquote
            (symbol)))
        (symbol)))))

================================================================================
Nested quoting
================================================================================

'(a '(b c))

--------------------------------------------------------------------------------

(source_file
  (quote
    (list
      (symbol)
      (quote
        (list
          (symbol)
          (symbol))))))
