test/corpus/special_forms.txt
================================================================================
Function definition
================================================================================

(def square (fn [x] (* x x)))

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (vector
        (symbol))
      (list
        (symbol)
        (symbol)
        (symbol)))))

================================================================================
Namespace declaration
================================================================================

(ns myns
  "A test namespace"
  (require [otherns :as other])
  (export public-fn))

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (string)
    (list
      (symbol)
      (vector
        (symbol)
        (keyword)
        (symbol)))
    (list
      (symbol)
      (symbol))))

================================================================================
Comments
================================================================================

;; This is a comment
(def x 42) ; end of line comment

--------------------------------------------------------------------------------

(source_file
  (comment)
  (list
    (symbol)
    (symbol)
    (number))
  (comment))
